--- a/Uonic.Umbraco/Web.config
+++ b/Uonic.Umbraco/Web.config
@@ -57,7 +57,7 @@
 		<add key="autoFormsAuthentication" value="false" />
 
 		<add key="log4net.Config" value="config\log4net.config" />
-		<add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
+		<add key="owin:appStartup" value="UmbracoIdentityStartup" />
 
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
@@ -114,6 +114,7 @@
 			<add name="UmbracoModule" type="Umbraco.Web.UmbracoModule,umbraco" />
 			<add name="ClientDependencyModule" type="ClientDependency.Core.Module.ClientDependencyModule, ClientDependency.Core" />
 			<add name="ImageProcessorModule" type="ImageProcessor.Web.HttpModules.ImageProcessingModule, ImageProcessor.Web" />
+      <remove name="FormsAuthenticationModule" />
 		</httpModules>
 		<httpHandlers>
 			<remove verb="*" path="*.asmx" />
@@ -125,7 +126,7 @@
 			<add verb="*" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core " />
 		</httpHandlers>
 
-		<compilation defaultLanguage="c#" debug="false" batch="false" targetFramework="4.5" numRecompilesBeforeAppRestart="50">
+		<compilation defaultLanguage="c#" debug="true" batch="false" targetFramework="4.5" numRecompilesBeforeAppRestart="50">
 			<assemblies>
 				<remove assembly="System.Web.Http" />
 				<remove assembly="System.Net.Http" />
@@ -241,17 +242,12 @@
 			</buildProviders>
 		</compilation>
 
-		<authentication mode="Forms">
-			<forms name="yourAuthCookie" loginUrl="login.aspx" protection="All" path="/" />
-		</authentication>
-		<authorization>
-			<allow users="?" />
-		</authorization>
+    <authentication mode="None" />
 		<!-- Membership Provider -->
 		<membership defaultProvider="UmbracoMembershipProvider" userIsOnlineTimeWindow="15">
 			<providers>
 				<clear />
-				<add name="UmbracoMembershipProvider" type="Umbraco.Web.Security.Providers.MembersMembershipProvider, Umbraco" minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" useLegacyEncoding="true" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" defaultMemberTypeAlias="Member" passwordFormat="Hashed" />
+				<add name="UmbracoMembershipProvider" type="UmbracoIdentity.IdentityEnabledMembersMembershipProvider, UmbracoIdentity" minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" useLegacyEncoding="true" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" defaultMemberTypeAlias="Member" passwordFormat="Hashed" />
 				<add name="UsersMembershipProvider" type="Umbraco.Web.Security.Providers.UsersMembershipProvider, Umbraco" minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" useLegacyEncoding="true" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" passwordFormat="Hashed" />
 			</providers>
 		</membership>
@@ -286,10 +282,9 @@
 			<remove name="ClientDependencyModule" />
 			<add name="ClientDependencyModule" type="ClientDependency.Core.Module.ClientDependencyModule, ClientDependency.Core" />
 
-			<!-- Needed for login/membership to work on homepage (as per http://stackoverflow.com/questions/218057/httpcontext-current-session-is-null-when-routing-requests) -->
-			<remove name="FormsAuthentication" />
-			<add name="FormsAuthentication" type="System.Web.Security.FormsAuthenticationModule" />
 			<add name="ImageProcessorModule" type="ImageProcessor.Web.HttpModules.ImageProcessingModule, ImageProcessor.Web" />
+
+      <remove name="FormsAuthentication" />
 		</modules>
 
 		<handlers accessPolicy="Read, Write, Script, Execute">
