--- a/Uonic.Umbraco/packages.config
+++ b/Uonic.Umbraco/packages.config
@@ -42,6 +42,7 @@
   <package id="Umbraco.ModelsBuilder" version="3.0.7" targetFramework="net452" />
   <package id="UmbracoCms" version="7.5.13" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.5.13" targetFramework="net452" />
+  <package id="UmbracoIdentity.Core" version="5.0.0" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
