--- a/Uonic.Ionic/package.json
+++ b/Uonic.Ionic/package.json
@@ -25,6 +25,7 @@
         "@ionic/storage": "2.0.1",
         "ionic-angular": "3.0.1",
         "ionicons": "3.0.0",
+        "moment": "2.18.1",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.4.0",
         "zone.js": "^0.8.4"
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@ionic/app-scripts": "1.3.0",
         "@ionic/cli-plugin-ionic-angular": "1.1.2",
+        "@types/moment": "2.13.0",
         "typescript": "~2.2.1"
     },
     "cordovaPlugins": [
