--- a/Umbraco.Site/Umbraco.Site.csproj
+++ b/Umbraco.Site/Umbraco.Site.csproj
@@ -343,6 +343,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppSettings.cs" />
     <Compile Include="App_Start\UmbracoIdentityStartup.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
