--- a/Umbraco.Site/Web.config
+++ b/Umbraco.Site/Web.config
@@ -60,6 +60,7 @@
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
 
+    <add key="EnableLocalLogin" value="false" />
     <add key="FacebookAppId" value="" />
     <add key="FacebookAppSecret" value="" />
     <add key="GoogleClientId" value="" />
