--- a/Umbraco.Site/Umbraco.Site.csproj
+++ b/Umbraco.Site/Umbraco.Site.csproj
@@ -344,6 +344,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
+    <Compile Include="App_Start\UmbracoEventHandler.cs" />
     <Compile Include="App_Start\UmbracoIdentityStartup.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
