--- a/Ionic.App/package.json
+++ b/Ionic.App/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/core": "3.10.2",
+    "@ionic-native/in-app-browser": "^3.12.1",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "2.0.1",
+    "cordova-plugin-inappbrowser": "^1.7.1",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
     "moment": "2.18.1",
@@ -33,8 +35,14 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.4.0",
     "@ionic/cli-plugin-ionic-angular": "1.3.1",
     "typescript": "2.3.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-inappbrowser": {}
+    }
+  }
 }
